# mcq-extractor-api

./: .gitignore  CURRENT_STATUS_REPORT.md  DOCUMENTATION_INDEX.md  ENHANCED_FEATURES_SUMMARY.md  ERROR_FIX_REPORT.md  EXTRACTION_IMPROVEMENTS_REPORT.md  FINAL_STATUS_REPORT.md  GITHUB_DEPLOYMENT_GUIDE.md  LICENSE  MCQ_EXTRACTION_FIX_REPORT.md  PYMUPDF_FIX_REPORT.md  README.md  README_GITHUB.md  TESSERACT_INSTALL.md  TEST_REPORT.md  debug_answers.py  debug_enhanced.py  debug_image_ocr.py  debug_mcq.py  debug_parse_loop.py  debug_tables.py  debug_visual_extraction.py  diagnose_extraction.py  final_test.py  final_verification_test.py  fix_extraction_issues.py  get_app_status.py  main.py  main_complete.py  pdf_diagnostic_guide.py  pyproject.toml  requirements.txt  sample_enhanced_mcqs.txt  sample_test.txt  tesseract_solution.py  test_api.py  test_api_ocr.py  test_comprehensive.py  test_comprehensive_extraction.py  test_enhanced_api.py  (+18 more)
